--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@angularclass/bootloader": "~1.0.1",
     "@angularclass/idle-preload": "~1.0.4",
     "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^2.0.0",
     "@ngrx/store": "^2.2.1",
     "angular2-express-engine": "~2.1.0-rc.1",
     "angular2-platform-node": "~2.1.0-rc.1",
