--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.0",
     "@ngrx/store": "^2.2.1",
+    "@types/jquery": "^2.0.40",
+    "@types/slick-carousel": "^1.6.31",
     "angular2-express-engine": "~2.1.0-rc.1",
     "angular2-platform-node": "~2.1.0-rc.1",
     "angular2-universal": "~2.1.0-rc.1",
@@ -60,11 +62,13 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "jquery": "^3.1.1",
     "js.clone": "0.0.3",
     "methods": "~1.1.2",
     "morgan": "^1.7.0",
     "preboot": "~4.5.2",
     "rxjs": "5.0.0-beta.12",
+    "swiper": "^3.4.1",
     "webfontloader": "^1.6.26",
     "zone.js": "~0.6.26"
   },
