--- a/package.json
+++ b/package.json
@@ -53,16 +53,17 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.0",
     "@ngrx/store": "^2.2.1",
-    "@types/jquery": "^2.0.40",
-    "@types/slick-carousel": "^1.6.31",
-    "angular-in-memory-web-api": "^0.2.1",
     "angular2-express-engine": "~2.1.0-rc.1",
     "angular2-platform-node": "~2.1.0-rc.1",
     "angular2-universal": "~2.1.0-rc.1",
     "angular2-universal-polyfills": "~2.1.0-rc.1",
+    "apollo-angular": "^0.11.0",
+    "apollo-client": "^0.8.7",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "express": "^4.14.0",
+    "graphql-tag": "^1.2.4",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.1",
     "js.clone": "0.0.3",
     "methods": "~1.1.2",
@@ -74,20 +75,20 @@
     "zone.js": "~0.6.26"
   },
   "devDependencies": {
-    "@types/morgan": "^1.7.32",
+    "@ngtools/webpack": "~1.1.7",
     "@types/body-parser": "0.0.29",
     "@types/compression": "0.0.29",
     "@types/cookie-parser": "^1.3.29",
     "@types/express": "^4.0.32",
     "@types/express-serve-static-core": "^4.0.33",
+    "@types/graphql": "^0.8.6",
     "@types/hammerjs": "^2.0.32",
+    "@types/jquery": "^2.0.40",
     "@types/mime": "0.0.28",
+    "@types/morgan": "^1.7.32",
     "@types/node": "^6.0.38",
     "@types/serve-static": "^1.7.27",
     "@types/webfontloader": "^1.6.27",
-    "@types/jquery": "^2.0.34",
-    "@types/slick-carousel": "^1.6.31",
-    "@ngtools/webpack": "~1.1.7",
     "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^2.2.4",
     "cookie-parser": "^1.4.3",
