--- a/package.json
+++ b/package.json
@@ -54,11 +54,13 @@
     "@ngrx/effects": "^2.0.0",
     "@ngrx/store": "^2.2.1",
     "angular2-express-engine": "~2.1.0-rc.1",
+    "angular2-jwt": "^0.1.28",
     "angular2-platform-node": "~2.1.0-rc.1",
     "angular2-universal": "~2.1.0-rc.1",
     "angular2-universal-polyfills": "~2.1.0-rc.1",
     "apollo-angular": "^0.11.0",
     "apollo-client": "^0.8.7",
+    "auth0-js": "^8.2.0",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "express": "^4.14.0",
@@ -76,6 +78,7 @@
   },
   "devDependencies": {
     "@ngtools/webpack": "~1.1.7",
+    "@types/accepts": "^1.3.1",
     "@types/body-parser": "0.0.29",
     "@types/compression": "0.0.29",
     "@types/cookie-parser": "^1.3.29",
@@ -84,16 +87,21 @@
     "@types/graphql": "^0.8.6",
     "@types/hammerjs": "^2.0.32",
     "@types/jquery": "^2.0.40",
+    "@types/memory-cache": "0.0.29",
     "@types/mime": "0.0.28",
     "@types/morgan": "^1.7.32",
     "@types/node": "^6.0.38",
     "@types/serve-static": "^1.7.27",
     "@types/webfontloader": "^1.6.27",
+    "accepts": "^1.3.3",
     "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^2.2.4",
     "cookie-parser": "^1.4.3",
+    "express-interceptor": "^1.2.0",
+    "iltorb": "^1.0.13",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
+    "memory-cache": "^0.1.6",
     "nodemon": "^1.10.0",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "0.1.8",
